--- a/QEditor/Info.plist
+++ b/QEditor/Info.plist
@@ -28,6 +28,8 @@
 	<string>此 App 需要您的同意才能读取媒体资料库</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>此 App 需要您的同意才能读取媒体资料库</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>此 App 需要您的同意才能使用麦克风</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
